<resources>
    <string name="app_name">Foods El Regio</string>
    <string name="hint_login_password">Password</string>
    <string name="button_text_login_sign_in">Sign-in</string>
    <string name="button_text_login_register">Register</string>
    <string name="hint_login_email">E-mail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_button_positive_register">Register</string>
    <string name="dialog_button_negative_cancel">Cancelar</string>
    <string name="dialog_title_new_user">Register new user</string>
    <string name="message_email_or_password_incorrect">E-mail or password are incorrect</string>
    <string name="edit_text_register_username">Username</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_title_log_out">Log out</string>
</resources>
